education and image bug fixed
